--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>TEST</title>
+    <title>reubensendwishes</title>
 </head>
 <body>
-    <h1>reuben and sandwich</h1>
-    <p>test</p>
+    <h1>reubensendwishes</h1>
 </body>
 </html>
